# SerialAssis

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_ZH.md  main.cpp
doc/html/: _main_window_8cpp.html  _main_window_8h.html  _main_window_8h_source.html  _serial_connection_8cpp.html  _serial_connection_8h.html  _serial_connection_8h_source.html  _serial_monitor_8cpp.html  _serial_monitor_8h.html  _serial_monitor_8h_source.html  annotated.html  class_main_window-members.html  class_main_window.html  class_serial_connection-members.html  class_serial_connection.html  class_serial_monitor-members.html  class_serial_monitor.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  hierarchy.html  index.html  main_8cpp.html  menudata.js
doc/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_c.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
doc/latex/: _main_window_8cpp.tex  _main_window_8h.tex  _main_window_8h_source.tex  _serial_connection_8cpp.tex  _serial_connection_8h.tex  _serial_connection_8h_source.tex  _serial_monitor_8cpp.tex  _serial_monitor_8h.tex  _serial_monitor_8h_source.tex  annotated.tex  class_main_window.tex  class_serial_connection.eps  class_serial_connection.tex  class_serial_monitor.eps  class_serial_monitor.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_b0856f6b0d80ccb263b2f415c91f9e17.tex  files.tex  hierarchy.tex  main_8cpp.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
include/: MainWindow.h  SerialConnection.cpp  SerialConnection.h  SerialMonitor.h  UiWindow.h
src/: ConfigParser.cpp  DataParser.cpp  DataWrapper.cpp  MainWindow.cpp  SerialConnection.cpp  SerialMonitor.cpp  UiWindow.cpp  main.cpp  mainwindow.ui
src/include/: ConfigParser.h  ConfigStruct.h  DataParser.h  DataWrapper.h  LocalEnumType.h  MainWindow.h  SerialConnection.h  SerialMonitor.h
test/: checkMessagePack.cpp  integrate_DataParser_DataWrapper_SerialConnection.cpp  unit_DataParser_DataWrapper.cpp
unit_test/: test_ConfigParser.cpp  test_SerialConnection.cpp
